gmt (5.3.1+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Update Homepage URL to not include 'projects/gmt' path.
  * Update copyright file, changes:
    - Update copyright years for copyright holders
    - Add Dongdong Tian to copyright holders
  * Drop patches applied upstream. Refresh remaining patches.
  * Drop custom coastline.conf, not installed.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 22 Oct 2016 10:16:26 +0200

gmt (5.2.1+dfsg-7) unstable; urgency=medium

  * Add patch to fix FTBFS with glibc 2.23.
    (closes: #818807)

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 07 Jul 2016 18:13:57 +0200

gmt (5.2.1+dfsg-6) unstable; urgency=medium

  * Add patch to use SOURCE_DATE_EPOCH instead of current date.
    (closes: #824668)

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 28 May 2016 12:39:02 +0200

gmt (5.2.1+dfsg-5) unstable; urgency=medium

  * Bump Standards-Version to 3.9.8, no changes.
  * Enable all hardening buildflags.
  * Add patch for spelling errors.
  * Drop obsolete lintian override for old-style-config-script-multiarch-path.

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 05 May 2016 12:11:06 +0200

gmt (5.2.1+dfsg-4) unstable; urgency=medium

  * Update Vcs-Git URL to use HTTPS.
  * Bump Standards-Version to 3.9.7, no changes.
  * Add patches for various typos.
  * Add lintian override for old-style-config-script-multiarch-path.
    See: https://lists.debian.org/debian-devel/2016/01/msg00688.html
  * Drop unused FLOCK CMake option.
  * Add patch to fix build on sparc64.

 -- Bas Couwenberg <sebastic@debian.org>  Fri, 19 Feb 2016 02:43:47 +0100

gmt (5.2.1+dfsg-3) unstable; urgency=medium

  * Add patch to fix build on HPPA.
    Thanks to John David Anglin for the patch.
    (closes: #805731)
  * Add patch to fix build on alpha.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 21 Nov 2015 20:10:21 +0100

gmt (5.2.1+dfsg-2) unstable; urgency=medium

  * Add Breaks/Replaces for files moved from gmt-doc-pdf to gmt-doc.
