@@ -7,6 +7,7 @@ gmt (5.3.1+dfsg-1) UNRELEASED; urgency=medium
     - Add Dongdong Tian to copyright holders
   * Drop patches applied upstream. Refresh remaining patches.
   * Drop custom coastline.conf, not installed.
+  * Update gmt-config manpage for upstream changes.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 22 Oct 2016 10:16:26 +0200
 
